--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "bot-zdg: based on Whatsapp API",
   "main": "app.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node botzdg.js",
     "start:dev": "nodemon botzdg.js",
