--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "bot-zdg: based on Whatsapp API",
   "main": "app.js",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "start": "node botzdg.js",
     "start:dev": "nodemon botzdg.js",
@@ -31,7 +28,9 @@
     "qrcode": "^1.4.4",
     "socket.io": "2.3.0",
     "util": "^0.12.4",
-    "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_7"
+    "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_7",
+    "@sparticuz/chromium": "113.0.1",
+    "puppeteer-core": "20.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
